--- a/pricing.html
+++ b/pricing.html
@@ -113,7 +113,7 @@
                     </a>
                 </li>
                 <li class>
-                    <a href="./select_plan.html" class="btn btn-danger px-4">
+                    <a href="./pricing.html" class="btn btn-danger px-4">
                         Sign Up
                     </a>
                 </li>
@@ -267,7 +267,7 @@
                                     <!-- </div> -->
                                 </div>
                                 <div class="text-center  mt-auto">
-                                    <a href="./premuim_onboarding.html" to="/registerpremium">
+                                    <a href="./sign-up-premium.html" to="/registerpremium">
                                         <button class="btn btn-block btn-outline-success px-3">
                                             Select Plan
                                         </button>
