--- a/select_plan.html
+++ b/select_plan.html
@@ -113,7 +113,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./select_plan.html" class="btn btn-danger px-4">
+                    <a href="./pricing.html" class="btn btn-danger px-4">
                         Sign Up
                     </a>
                 </li>
