--- a/free_onboarding.html
+++ b/free_onboarding.html
@@ -107,7 +107,7 @@
                     </a>
                 </li>
                 <li class="active">
-                    <a href="./select_plan.html" class="btn btn-danger px-4">
+                    <a href="./pricing.html" class="btn btn-danger px-4">
                         Sign Up
                     </a>
                 </li>
