--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </a>
                 </li>
                 <li class>
-                    <a href="./select_plan.html" class="btn btn-danger px-4">
+                    <a href="./pricing.html" class="btn btn-danger px-4">
                         Sign Up
                     </a>
                 </li>
