--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
         </div>
     </nav>
 
-    <section class="page-section black1_bg text-white" id="portfolio">
+    <section class="page-section black2_bg text-white" id="portfolio">
         <div class="black1_bg py-5 mt-4">
             <div class="row no-gutters justify-content-center align-content-end">
 
@@ -74,36 +74,36 @@
                     </div>
                 </div>
                 <div class="col-md-5">
-                    <div class="flex-even py-5 py-md-0 boxshadow bg-white">
+                    <div class="flex-even py-5 py-md-0 boxshadow black1_bg textwhite">
                         <div class="row py-md-5 justify-content-center">
                             <div class="col-md-10 ">
-                                <div class="text-dark">
+                                <div class="text-light">
                                     <div class="px-4 px-md-0">
                                         <p class="h2 text-center font-weight-bold mb-4">
-                                            Login
+                                            Login to your account
                                         </p>
                                         <form id="onlyForm">
-                                            <div class="form-group">
-                                                <label for="exampleInputEmail1">Email address</label>
+                                            <div class="form-group mb-4">
+                                                
                                                 <input @change="welcome" v-model="email" required type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                                             </div>
-                                            <div class="form-group">
-                                                <label for="exampleInputPassword1">Password</label>
+                                            <div class="form-group mb-4">
+                                                
                                                 <input @change="welcome" v-model="password" required type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                                             </div>
 
-                                            <button data-toggle="modal" :disabled="disabled" data-target="#exampleModalCenterPremuim" type="submit" class="mt-4 btn btn-block btn-success">Login</button>
+                                            <button data-toggle="modal" :disabled="disabled" data-target="#exampleModalCenterPremuim" type="submit" class="mt-5 btn btn-block btn-success">Login</button>
                                         </form>
                                         <p class="mt-3 text-center">
-                                            <span class="text-danger">
-                                                <a class="text-danger" href="./forgot_password.html">
-                                                    Forgot password
+                                            <span class="text-dark">
+                                                <a class="text-dark" href="./forgot_password.html">
+                                                    Forgot password?
                                                 </a>
                                             </span>
-                                            <span class="d-inline-block mx-2">||</span>
-                                            <span class="text-dark">Don't have an account
+                                            <span class="d-inline-block mx-2 text-dark">|</span>
+                                            <span class="text-dark">Don't have an account?
                                                 <a class="text-success" href="./sign-up.html">
-                                                    Create
+                                                    Signup
                                                 </a>
                                             </span>
                                         </p>
