--- a/forgot_password.html
+++ b/forgot_password.html
@@ -71,12 +71,12 @@
                     </div>
                 </div>
                 <div class="col-md-5">
-                    <div class="flex-even py-5 bg-white">
+                    <div class="flex-even py-5 py-md-0 boxshadow black1_bg textwhite">
                         <div class="row  justify-content-center">
                             <div class="col-md-9 px-4 px-md-0">
                                 <div class=" text-dark">
                                     <div class="">
-                                        <p class="h2 text-center font-weight-bold mb-4 text-danger">
+                                        <p class="h2 text-center font-weight-bold mb-4">
                                             Forgot Password
                                         </p>
 
@@ -88,20 +88,15 @@
                                             <small>You'll receive an email to reset your password
                                             </small>
 
-                                            <button data-toggle="modal" :disabled="disabled" data-target="#exampleModalCenterPremuim" type="submit" class="mt-4 btn btn-block btn-success">Send Email</button>
+                                            <button data-toggle="modal" :disabled="disabled" data-target="#exampleModalCenterPremuim" type="submit" class="mt-4 btn btn-block btn-success">Reset password</button>
                                         </form>
                                         <p class="mt-3 text-center">
-                                            <span class="text-danger">
-                                                <a class="text-danger" href="./sign-up.html">
-                                                    Sign Up
+                                            <span class="text-dark"> Don't have an account?
+                                                <a class="text-success" href="./sign-up.html">
+                                                   Sign Up
                                                 </a>
                                             </span>
-                                            <span class="d-inline-block mx-2">||</span>
-                                            <span class="text-dark">Already have an account
-                                                <a class="text-success" href="./login.html">
-                                                    Login
-                                                </a>
-                                            </span>
+                                            
                                         </p>
                                     </div>
                                 </div>
