--- a/billing_info.html
+++ b/billing_info.html
@@ -41,7 +41,7 @@
 
                 </ul>
             </div>
-            <ul class="mb-0 float-right d-inline-flex  navbar-nav">
+            <ul class="mb-0 float-md-right d-inline-flex  navbar-nav">
                 <li class="nav-items mb-2 mb-md-0  mr-2">
                     <a href="./login.html" class="btn btn-outline-success px-4">
                         Login
