--- a/free_dashboard.html
+++ b/free_dashboard.html
@@ -36,6 +36,9 @@
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="/">
                 <img src="assets/img/logos/logo.png" alt="" style="width: 100%; height:100%;" /></a>
+                <a class="btn btn-success px-4 js-scroll-trigger d-lg-none d-md-none d-sm-inline-block" href="./upgrade.html">
+                        Go Premium
+                    </a>
             <button class="navbar-toggler bg-transparent navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars ml-1"></i>
             </button>
@@ -70,11 +73,9 @@
 
                 </ul>
 
-
-            </div>
-            <ul class="mb-0 float-right d-inline-flex">
+                <ul class="mb-0 float-md-right d-inline-flex  navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="./upgrade.html">
+                    <a class="btn btn-success px-4 js-scroll-trigger" href="./upgrade.html">
                         Go Premium
                     </a>
                 </li>
@@ -91,6 +92,8 @@
                     </div>
                 </li>
             </ul>
+            </div>
+            
         </div>
     </nav>
 
