--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 </head>
 
 <body id="page-to">
-    <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top black1_bg" id="mainNav">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="./index.html">
@@ -31,15 +30,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav m-auto">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="./index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">About Us</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/pricing.html">Pricing</a>
                     </li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Contact</a></li>
 
                 </ul>
-            </div>
-            <ul class="mb-0 float-right d-inline-flex  navbar-nav">
+                <ul class="mb-0 float-md-right d-inline-flex  navbar-nav">
                 <li class="nav-items mb-2 mb-md-0  mr-2">
                     <a href="./login.html" class="btn btn-outline-success px-4">
                         Login
@@ -51,16 +49,21 @@
                     </a>
                 </li>
             </ul>
+            </div>
+            
         </div>
     </nav>
+ 
+
     <!-- Masthead-->
-    <header class="masthead">
+    <section class="page-section masthead">
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
                     <div class="masthead-subheading">
-                        <p data-aos="fade-right" class="text-left">
-                            <span>Exclusive <br>Market Overviews</span> <br> and detailed trade analysis that let you take your trading to the next level.
+                        <span>Exclusive <br>Market Overviews</span>
+                        <p data-aos="fade-right" class="pt-4 text-left">
+                        and detailed trade analysis that let you take your trading to the next level.
                         </p>
                     </div>
                     <div class="d-flex justify-content-start">
@@ -69,7 +72,7 @@
                 </div>
             </div>
         </div>
-    </header>
+    </section>
     <!-- Robost tools-->
     <section class="page-section black2_bg" id="services">
         <div class="container">
