--- a/login.html
+++ b/login.html
@@ -39,8 +39,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Contact</a></li>
                     
                 </ul>
-            </div>
-            <ul class="mb-0 float-right d-inline-flex">
+                <ul class="mb-0 float-md-right d-inline-flex  navbar-nav">
                     <li class="nav-items mb-2 mb-md-0  mr-2">
                         <a href="./login.html" class="btn btn-outline-success px-4">
                             Login
@@ -52,6 +51,8 @@
                         </a>
                     </li>
                 </ul>
+            </div>
+            
         </div>
     </nav>
 
