--- a/premuim_onboarding.html
+++ b/premuim_onboarding.html
@@ -99,8 +99,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Contact</a></li>
 
                     </ul>
-                </div>
-                <ul class="mb-0 float-right d-inline-flex  navbar-nav">
+                    <ul class="mb-0 float-md-right d-inline-flex  navbar-nav">
                     <li class="nav-items mb-2 mb-md-0  mr-2">
                         <a href="./login.html" class="btn btn-outline-success px-4">
                             Login
@@ -112,6 +111,8 @@
                         </a>
                     </li>
                 </ul>
+                </div>
+                
             </div>
         </nav>
 
@@ -171,7 +172,7 @@
                     
                         </div>
                     </div>
-                    <div class="col-md-4 ml-5">
+                    <div class="col-md-4 ml-md-5">
                         <div class="py-5 px-2 boxshadow border-0 hoverborder black1_bg texwhite p-5">
                             <p class="h2 font-weight-bold mb-4">
                                 Order Summary
