--- a/sign-up-premium.html
+++ b/sign-up-premium.html
@@ -99,8 +99,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Contact</a></li>
 
                 </ul>
-            </div>
-            <ul class="mb-0 float-right d-inline-flex  navbar-nav">
+                <ul class="mb-0 float-md-right d-inline-flex  navbar-nav">
                 <li class="nav-items mb-2 mb-md-0  mr-2">
                     <a href="./login.html" class="btn btn-outline-success px-4">
                         Login
@@ -112,6 +111,8 @@
                     </a>
                 </li>
             </ul>
+            </div>
+            
         </div>
     </nav>
 
