--- a/all_signals.html
+++ b/all_signals.html
@@ -151,21 +151,21 @@
                         </a>
                     </li>
                 </ul>
-                 <ul class="mb-0 float-md-right d-inline-flex  navbar-nav">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle  " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        My Account
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Profile</a>
-                        <a class="dropdown-item" href="#">Billing & Invoices</a>
-                        <a class="dropdown-item" href="#">Support</a>
-                        <a class="dropdown-item" href="#">Log out</a>
-                    </div>
-                </li>
-            </ul>
+                <ul class="mb-0 float-md-right d-inline-flex  navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle  " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            My Account
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Profile</a>
+                            <a class="dropdown-item" href="#">Billing & Invoices</a>
+                            <a class="dropdown-item" href="#">Support</a>
+                            <a class="dropdown-item" href="#">Log out</a>
+                        </div>
+                    </li>
+                </ul>
             </div>
-           
+
         </div>
     </nav>
 
@@ -206,28 +206,36 @@
                 <div class="card col-md-3  bg-transparent boxshadow p-3">
                     <div class="">
                         <p class="mb-1 text-muted signal-time">8:00 AM, Today </p>
-                        <img src="./assets/img/trade-signal.jpg" class="w-100 mb-2" alt="">
-                        
+                        <a href="./signal.html">
+                            <img src="./assets/img/trade-signal.jpg" class="w-100 mb-2" alt="">
 
-                        <a href="./signal.html"><button class="btn mt-2 px-md-4  w-100 btn-success" >View Signal</button></a> 
+
+                            <button class="btn mt-2 px-md-4  w-100 btn-success">View
+                                Signal</button></a>
                     </div>
 
                 </div>
                 <div class="card col-md-3 bg-transparent boxshadow p-3">
                     <div class="">
-                        <p class="mb-1 text-muted signal-time">9:00 AM, 21 Feb </p>
-                        <img  src="./assets/img/Market-trend -dynamics.jpg" class="w-100 mb-2" alt="">
+                        <a href="./signal.html">
+                            <p class="mb-1 text-muted signal-time">9:00 AM, 21 Feb </p>
+                            <img src="./assets/img/Market-trend -dynamics.jpg" class="w-100 mb-2" alt="">
 
-                        <a href="./signal.html"><button class="btn mt-2 px-md-4 w-100   btn-success" >View Signal</button></a> 
+                            <button class="btn mt-2 px-md-4 w-100   btn-success">View
+                                Signal</button>
+                        </a>
                     </div>
 
                 </div>
                 <div class="card col-md-3 bg-transparent boxshadow p-3">
                     <div class="">
-                        <p class="mb-1 text-muted signal-time">7:54 PM, 21 Feb </p>
-                        <img  src="./assets/img/technical-analysis.jpg" class="w-100 mb-2" alt="">
+                        <a href="./signal.html">
+                            <p class="mb-1 text-muted signal-time">7:54 PM, 21 Feb </p>
+                            <img src="./assets/img/technical-analysis.jpg" class="w-100 mb-2" alt="">
 
-                        <a href="./signal.html"><button class="btn mt-2 px-md-4 w-100  btn-success" >View Signal</button></a>
+                            <button class="btn mt-2 px-md-4 w-100  btn-success">View
+                                Signal</button>
+                        </a>
                     </div>
 
                 </div>
@@ -235,27 +243,37 @@
             <div class="card-deck justify-content-center mb-5">
                 <div class="card col-md-3  bg-transparent boxshadow p-3">
                     <div class="">
-                        <p class="mb-1 text-muted signal-time">8:00 PM, 20 Feb </p>
-                        <img  src="./assets/img/trade-signal.jpg" class="w-100 mb-2" alt="">
+                        <a href="./signal.html">
+                            <p class="mb-1 text-muted signal-time">8:00 PM, 20 Feb </p>
+                            <img src="./assets/img/trade-signal.jpg" class="w-100 mb-2" alt="">
 
-                        <a href="./signal.html"><button class="btn mt-2 px-md-4  w-100  btn-success" >View Signal</button></a> 
+                            <button class="btn mt-2 px-md-4  w-100  btn-success">View
+                                Signal</button>
+                        </a>
                     </div>
 
                 </div>
                 <div class="card col-md-3 bg-transparent boxshadow p-3">
                     <div class="">
-                        <p class="mb-1 text-muted signal-time">8:00 AM, 19 Feb </p>
-                        <img  src="./assets/img/Market-trend -dynamics.jpg" class="w-100 mb-2" alt="">
+                        <a href="./signal.html">
+                            <p class="mb-1 text-muted signal-time">8:00 AM, 19 Feb </p>
+                            <img src="./assets/img/Market-trend -dynamics.jpg" class="w-100 mb-2" alt="">
 
-                       <a href="./signal.html"><a href="./signal.html"><button class="btn mt-2 px-md-4   w-100 btn-success" >View Signal</button></a> </a> 
+                            <button class="btn mt-2 px-md-4   w-100 btn-success">View
+                                Signal</button>
+                        </a>
                     </div>
 
                 </div>
                 <div class="card col-md-3 bg-transparent boxshadow p-3">
-                    <div class=""><p class="mb-1 text-muted signal-time">11:42 AM, 18 Feb </p>
-                        <img  src="./assets/img/technical-analysis.jpg" class="w-100 mb-2" alt="">
+                    <div class="">
+                        <a href="./signal.html">
+                            <p class="mb-1 text-muted signal-time">11:42 AM, 18 Feb </p>
+                            <img src="./assets/img/technical-analysis.jpg" class="w-100 mb-2" alt="">
 
-                        <a href="./signal.html"><button class="btn mt-2 px-md-4  w-100  btn-success" >View Signal</button></a> 
+                            <button class="btn mt-2 px-md-4  w-100  btn-success">View
+                                Signal</button>
+                        </a>
                     </div>
 
                 </div>
