--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Fxmaestro - Login</title>
+    <title>Fxmaestro - Contact Us</title>
     <link rel="icon" type="image/x-icon" href="assets/img/logos/logo.png" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -17,13 +17,11 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/mine.css">
-    <!-- <link rel="stylesheet" href="./css/pricing_input.css"> -->
-    <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
 </head>
 
 <body id="page-to">
-    <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top black1_bg" id="mainNav">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="./index.html">
@@ -35,9 +33,10 @@
                 <ul class="navbar-nav m-auto">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="/pricing.html">Pricing</a>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/pricing.html">Pricing</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="./contact.html">Contact</a>
+                    </li>
 
                 </ul>
                 <ul class="mb-0 float-md-right d-inline-flex  navbar-nav">
@@ -46,8 +45,8 @@
                             Login
                         </a>
                     </li>
-                    <li>
-                        <a href="./sign-up.html" class="btn btn-danger px-4">
+                    <li class>
+                        <a href="./pricing.html" class="btn btn-danger px-4">
                             Sign Up
                         </a>
                     </li>
@@ -57,59 +56,91 @@
         </div>
     </nav>
 
-    <section class="page-section black2_bg text-white" id="portfolio">
-        <div class="black1_bg py-5 mt-4">
-            <div class="row no-gutters justify-content-center align-content-end">
-                <div class="col-md-5">
-                    <div class="flex-even py-5 py-md-0 boxshadow black1_bg textwhite">
-                        <div class="row py-md-5 justify-content-center">
-                            <div class="col-md-10 ">
-                                <div class="text-light">
-                                    <div class="px-4 px-md-0">
-                                        <p class="h2 text-center font-weight-bold mb-4">
-                                            Login to your account
-                                        </p>
-                                        <form id="onlyForm">
-                                            <div class="form-group mb-4">
 
-                                                <input @change="welcome" v-model="email" required type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                                            </div>
-                                            <div class="form-group mb-4">
 
-                                                <input @change="welcome" v-model="password" required type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                                            </div>
-
-                                            <button data-toggle="modal" :disabled="disabled" data-target="#exampleModalCenterPremuim" type="submit" class="mt-5 btn btn-block btn-success">Login</button>
-                                        </form>
-                                        <p class="mt-3 text-center">
-                                            <span class="text-dark">
-                                                <a class="text-dark" href="./forgot_password.html">
-                                                    Forgot password?
-                                                </a>
-                                            </span>
-                                            <span class="d-inline-block mx-2 text-dark">|</span>
-                                            <span class="text-dark">Don't have an account?
-                                                <a class="text-success" href="./sign-up.html">
-                                                    Signup
-                                                </a>
-                                            </span>
-                                        </p>
-                                    </div>
+    <!-- Robost tools-->
+    <section class="page-section black2_bg" id="services">
+        <div class="container py-5">
+            <div class="row pt-md-5 no-gutters justify-content-between align-items">
+                <div class="col-md-4 text-light">
+                    <div class="card boxshadow">
+                        <div class="card-body">
+                            <div class="h1 font-weight-bold mb-4">Contact Us</div>
+                            <div class="row">
+                                <div class="col-md-1">
+                                    <p class="lead">
+                                        <i class="fa fa-map"></i>
+                                    </p>
+                                </div>
+                                <div class="col-md-9">
+                                    <p class="lead">
+                                        15, Lorem de Ipsun Lagos.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="row my-2">
+                                <div class="col-md-1">
+                                    <p class="lead">
+                                        <i class="fa fa-envelope"></i>
+                                    </p>
+                                </div>
+                                <div class="col-md-9">
+                                    <p class="lead">
+                                        <a href="mailto:info@lada.com">
+                                            info@lorem.com
+                                        </a>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-1">
+                                    <p class="lead">
+                                        <i class="fa fa-phone"></i>
+                                    </p>
+                                </div>
+                                <div class="col-md-9">
+                                    <p class="lead">
+                                        <a href="tel:+2340585058">
+                                            23405850583039
+                                        </a>
+                                    </p>
                                 </div>
                             </div>
                         </div>
                     </div>
+
+                </div>
+                <div class="col-md-7">
+                    <form>
+                        <div class="form-group mb-4">
+                            <input required type="text" class="form-control" placeholder="First Name">
+                        </div>
+                        <div class="form-group mb-4">
+                            <input required type="text" class="form-control" placeholder="Last Name ">
+                        </div>
+                        <div class="form-group mb-4">
+                            <input required type="email" class="form-control" placeholder="Email">
+                        </div>
+                        <div class="form-group mb-4">
+                            <input required type="tel" class="form-control" placeholder="Phone Number">
+                        </div>
+                        <div class="form-group mb-4">
+                            <label>Send us your queries</label>
+                            <textarea required class="form-control" rows="5" placeholder="Body"></textarea>
+                        </div>
+                        <div class="row justify-content-center mt-5">
+                            <div class="col-md-5">
+                                <button data-toggle="modal" type="submit" class=" btn btn-block btn-success">Send</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
+
         </div>
-
-
-
-
-
-
-
     </section>
+
+
 
     <!-- Footer-->
     <footer class="footer py-4 footer-bg">
@@ -155,7 +186,6 @@
             </div>
         </div>
     </footer>
-    <!-- Portfolio Modals-->
 
 
 
@@ -169,19 +199,13 @@
     <script src="assets/mail/contact_me.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
-    <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
     <script>
         AOS.init({
-            offset: 100,
+            offset: 50,
             duration: 400
         });
-    </script> -->
-    <script>
-        document.getElementById('onlyForm').addEventListener('submit', (e) => {
-            e.preventDefault();
-            window.location.href = "/free_dashboard.html";
-        })
     </script>
 </body>
 
