--- a/free_dashboard.html
+++ b/free_dashboard.html
@@ -32,13 +32,13 @@
 
 <body id="page-to">
     <!-- Navigation-->
-    <nav class="navbar  navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top  black1_bg" id="mainNav">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="/">
                 <img src="assets/img/logos/logo.png" alt="" style="width: 100%; height:100%;" /></a>
-                <a class="btn btn-success px-4 js-scroll-trigger d-lg-none d-md-none d-sm-inline-block" href="./upgrade.html">
-                        Go Premium
-                    </a>
+            <a class="btn btn-success px-4 js-scroll-trigger d-lg-none d-md-none d-sm-inline-block" href="./upgrade.html">
+                Go Premium
+            </a>
             <button class="navbar-toggler bg-transparent navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars ml-1"></i>
             </button>
@@ -74,26 +74,27 @@
                 </ul>
 
                 <ul class="mb-0 float-md-right d-inline-flex  navbar-nav">
-                <li class="nav-item">
-                    <a class="btn btn-success px-4 js-scroll-trigger" href="./upgrade.html">
-                        Go Premium
-                    </a>
-                </li>
+                    <li class="nav-item">
+                        <a class="btn btn-success px-4 js-scroll-trigger" href="./upgrade.html">
+                            Go Premium
+                        </a>
+                    </li>
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle  " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        My Account
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Profile</a>
-                        <a class="dropdown-item" href="#">Billing & Invoices</a>
-                        <a class="dropdown-item" href="#">Support</a>
-                        <a class="dropdown-item" href="#">Log out</a>
-                    </div>
-                </li>
-            </ul>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle  " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            My Account
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="./free_profile.html">Profile</a>
+                            <a class="dropdown-item" href="./free_notification.html">Notifications</a>
+                            <a class="dropdown-item" href="#">Billing & Invoices</a>
+                            <a class="dropdown-item" href="#">Support</a>
+                            <a class="dropdown-item" href="#">Log out</a>
+                        </div>
+                    </li>
+                </ul>
             </div>
-            
+
         </div>
     </nav>
 
