--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/mine.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <style>
+        .card-img-overlay {
+            position: absolute;
+            top: 50px;
+            right: 0;
+            left: 0;
+            padding: 1.25rem;
+        }
+        
+        .card-img-overlay h5 {
+            opacity: 1 !important;
+            color: black !important;
+        }
+    </style>
 </head>
 
 <body id="page-to">
@@ -34,26 +48,26 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">About Us</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/pricing.html">Pricing</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./contact.html">Contact</a></li>
 
                 </ul>
                 <ul class="mb-0 float-md-right d-inline-flex  navbar-nav">
-                <li class="nav-items mb-2 mb-md-0  mr-2">
-                    <a href="./login.html" class="btn btn-outline-success px-4">
-                        Login
-                    </a>
-                </li>
-                <li class>
-                    <a href="./pricing.html" class="btn btn-danger px-4">
-                        Sign Up
-                    </a>
-                </li>
-            </ul>
+                    <li class="nav-items mb-2 mb-md-0  mr-2">
+                        <a href="./login.html" class="btn btn-outline-success px-4">
+                            Login
+                        </a>
+                    </li>
+                    <li class>
+                        <a href="./pricing.html" class="btn btn-danger px-4">
+                            Sign Up
+                        </a>
+                    </li>
+                </ul>
             </div>
-            
+
         </div>
     </nav>
- 
+
 
     <!-- Masthead-->
     <section class="page-section masthead">
@@ -63,7 +77,7 @@
                     <div class="masthead-subheading">
                         <span>Exclusive <br>Market Overviews</span>
                         <p data-aos="fade-right" class="pt-4 text-left">
-                        and detailed trade analysis that let you take your trading to the next level.
+                            and detailed trade analysis that let you take your trading to the next level.
                         </p>
                     </div>
                     <div class="d-flex justify-content-start">
@@ -130,7 +144,7 @@
     </section>
 
     <!-- Trade signals-->
-    <section class="page-section black1_bg text-white" id="portfolio">
+    <section class=" page-section black1_bg text-white" id="portfolio">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 p-5">
@@ -159,10 +173,11 @@
                 <div class="col-md-6">
                     <div class="boxshadow">
                         <iframe width="100%" height="400" src="https://www.youtube.com/embed/pibfiwCQ4fU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <!-- <img src="/assets/img/sections/trade-signals.jpg" class="w-100" alt=""> -->
+
                     </div>
                 </div>
-                <div class="col-md-6 p-5" data-aos="fade-left">
+                <!-- data-aos="fade-left" -->
+                <div class="col-md-6 p-5">
                     <div>
                         <p class="h2 bold2">
                             Actionable insights that assist you to trade effectively.
@@ -187,9 +202,8 @@
                         <img onclick="createPopupWin('popup.html', 
                             'popup', 1200, 650);" src="./assets/img/trade-signal.jpg" class="w-100 mb-2" alt="">
 
-                        <button @click="switchTechnical" class="btn mt-2 px-md-4   btn-success" onclick="createPopupWin('popup.html', 
-                            'popup', 1200, 650);">Expand<span class="d-none d-lg-inline">Signal</span>
-                        </button>
+                        <button class="btn mt-2 px-md-4   btn-success p-1 px-3" data-toggle="modal" data-target="#exampleModalCenter">Expand <span
+                                class="d-none d-lg-inline">Signal</span></button>
                     </div>
 
                 </div>
@@ -198,9 +212,8 @@
                         <img onclick="createPopupWin('popup.html', 
                             'popup', 1200, 650);" src="./assets/img/Market-trend -dynamics.jpg" class="w-100 mb-2" alt="">
 
-                        <button @click="switchTechnical" class="btn mt-2 px-md-4   btn-success" onclick="createPopupWin('popup.html', 
-                            'popup', 1200, 650);">Expand<span class="d-none d-lg-inline">Signal</span>
-                        </button>
+                        <button class="btn mt-2 px-md-4   btn-success p-1 px-3" data-toggle="modal" data-target="#exampleModalCenter">Expand <span
+                                class="d-none d-lg-inline">Signal</span></button>
                     </div>
 
                 </div>
@@ -209,9 +222,9 @@
                         <img onclick="createPopupWin('popup.html', 
                             'popup', 1200, 650);" src="./assets/img/technical-analysis.jpg" class="w-100 mb-2" alt="">
 
-                        <button @click="switchTechnical" class="btn mt-2 px-md-4   btn-success" onclick="createPopupWin('popup.html', 
-                            'popup', 1200, 650);">Expand<span class="d-none d-lg-inline">Signal</span>
-                        </button>
+
+                        <button class="btn mt-2 px-md-4   btn-success p-1 px-3" data-toggle="modal" data-target="#exampleModalCenter">Expand <span
+                                class="d-none d-lg-inline">Signal</span></button>
                     </div>
 
                 </div>
@@ -236,7 +249,7 @@
     <section class="page-section black2_bg text-white" id="portfolio">
         <div class="container">
             <div class="row align-items-center justify-content-center">
-                <div class="col-md-12">
+                <div class="col-md-10">
                     <div class=" text-center mb-2">
                         <p class="text-center h2 bold2">Testimonials</p>
                         <p>
@@ -246,7 +259,8 @@
 
                     <div>
                         <div class="row justify-content-around testimonials pr-5 pl-5">
-                            <div class="col-md-6" data-aos="fade-right">
+                            <!-- data-aos="fade-right" -->
+                            <div class="col-md-6">
                                 <div class="card boxshadow p-4">
                                     <div class="card-body">
                                         <p class="testimonial-content">
@@ -257,7 +271,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6" data-aos="fade-left">
+                            <!-- data-aos="fade-left" -->
+                            <div class="col-md-6">
                                 <div class="card boxshadow p-4">
                                     <div class="card-body">
                                         <p class="testimonial-content">
@@ -321,9 +336,85 @@
             </div>
         </div>
     </footer>
-    <!-- Portfolio Modals-->
 
+    <!-- Modal -->
+    <div class="modal fade shadow  " id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+            <div class="modal-content" style="background-color: #222;">
+                <div class="modal-header">
+                    <h5 class="modal-title text-white">Trade Signal</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="text-white">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body mb-3">
+                    <div class="container">
+                        <div class="card">
+                            <div class="blurred">
+                                <img class="card-img" src="./assets/img/chartboad2.jpg" alt="Card image">
+                            </div>
+                            <div class="card-img-overlay">
+                                <h5 class="h3 font-weight-bold text-center fon text-dark">To view signal, sign up for premium.
+                                </h5>
+                                <div class="text-center mt-md-5">
+                                    <a class="btn btn-success px-4" href="./pricing.html">
+                                        Go Premium
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
 
+                        <div class="row justify-content-center">
+                            <div class="col-md-5 p-3 mr-md-3" style="background: #191919;box-sizing: border-box;box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);border-radius: 3px;">
+                                <div class="blurred">
+                                    <div class="">
+                                        <div class="row justify-content-between border-bottom border-dark pb-3">
+                                            <div class="col-md-6 text-left">
+                                                Currency Pair
+                                            </div>
+                                            <div class="col-md-6 text-left">
+                                                EURNZD
+                                            </div>
+                                        </div>
+                                        <div class="row justify-content-between border-bottom border-dark py-3">
+                                            <div class="col-md-6 text-left">
+                                                Harmonic Pattern
+                                            </div>
+                                            <div class="col-md-6 text-left">
+                                                Bullish Cypher
+                                            </div>
+                                        </div>
+                                        <div class="row justify-content-between border-bottom border-dark py-3">
+                                            <div class="col-md-6 text-left">
+                                                Time Frame
+                                            </div>
+                                            <div class="col-md-6 text-left">
+                                                Daily
+                                            </div>
+                                        </div>
+                                        <div class="row justify-content-between border-bottom border-dark py-3">
+                                            <div class="col-md-6 text-left">
+                                                Trend Biase
+                                            </div>
+                                            <div class="col-md-6 text-left">
+                                                Buy
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-5 p-3" style="background:#191919;box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);border-radius: 3px">
+                                <p class="text-justify blurred">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad voluptates blanditiis porro aperiam dolor aliquam est eum quos dolorem labore? Iste tempora unde dolorem molestias voluptatibus, explicabo et tempora unde dolorem molestias voluptatibus, explicabo
+                                    et quisquam quidem.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Bootstrap core JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
