--- a/free_notification.html
+++ b/free_notification.html
@@ -125,7 +125,7 @@
         </div>
     </nav>
 
-    <section class="page-section  black2_bg text-white">
+    <section class="page-section pt-5  black2_bg text-white">
 
         <div class="py-5">
             <p class="display-4 text-center">
@@ -219,7 +219,9 @@
                             </div>
                         </div>
                     </div>
-
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Footer-->
